MnemonicDialog allows storing mnemonic on the node. The mnemonic can be viewed later in Settings.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -408,6 +408,7 @@
   "name" : "Name",
   "name-already-taken" : "Name is already taken. Note that you can add any number to the name (like 'Arthur_42')",
   "name-help" : "The name must be 4 - 120 characters long. You may use any Unicode character (including non-Latin alphabets), except whitespace and punctuation. Only this punctuation is allowed:",
+  "name-key" : "Name Key",
   "name-not-allowed" : "Name is not allowed",
   "name-operation-started" : "Name operation started",
   "name-or-node-url" : "Blog name or URL",
@@ -442,6 +443,7 @@
   "nothing-yet" : "Nothing yet.",
   "notify-about-update" : "Notify followers about the update",
   "notify-followers" : "Notify followers",
+  "not-now" : "Not now",
   "not-publish-my-complaint" : "Please, do not publish my complaint",
   "not-show-complaints" : "Do not show complaints",
   "not-specified" : "Not specified",
@@ -567,7 +569,6 @@
   "redirecting" : "Redirecting...",
   "register" : "Register",
   "register-different-name" : "Register a different name",
-  "registered-name-secret" : "Registered Name Secret",
   "register-new-name" : "Register a New Name",
   "reject" : "Reject",
   "remind-later" : "Remind later",
@@ -815,6 +816,7 @@
     "sheet" : {
       "addons" : "Add-ons",
       "appearance" : "Appearance",
+      "applications" : "Applications",
       "comment" : "Comment",
       "moderation" : "Moderation",
       "news" : "News",
@@ -970,8 +972,9 @@
   "width" : "Width",
   "write-anything" : "Write anything...",
   "write-comment-here" : "Write a comment to {mention} here...",
-  "write-down-words" : "Please write down or print these words and keep them in a safe place. You will need them for any operations with the name ‘{name}’. <b>If you loose these words, they cannot be recovered and you will completely loose control of your registered name.</b>",
-  "written-down-words" : "I have written down all these words",
+  "write-down-secret-words" : "<0>Write down the secret words.</0> With these words, you can, if necessary, transfer your blog to another server, keeping your name and all social connections. Copy these words and store them in a safe place. Delete them from the server so they remain only with you.",
+  "write-down-words" : "<0>Please write down, save to a file, or print these words and keep them in a safe place.</0><1>If you lose these words, they cannot be recovered, and you will completely lose control over your registered name.</1><2>You will need them for any operations with the name ‘{name}’.</2>",
+  "written-down-delete-words" : "Written down. Delete the words from the server",
   "wrong-reset-token" : "Wrong secret code",
   "yes" : "Yes",
   "you-at-home" : "You are at your home node",
