--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -408,6 +408,7 @@
   "name" : "Nazwa",
   "name-already-taken" : "Nazwa jest już zajęta. Zauważ, że możesz dodać do nazwy dowolną liczbę (np. 'Arthur_42')",
   "name-help" : "Nazwa musi mieć od 4 do 120 znaków. Możesz używać dowolnego znaku Unicode (w tym niełacińskiego alfabetu), z wyjątkiem białych znaków i interpunkcji. Dozwolona jest tylko ta interpunkcja:",
+  "name-key" : "Klucz imienny",
   "name-not-allowed" : "Nazwa jest niedozwolona",
   "name-operation-started" : "Rozpoczęto operację nazwy",
   "name-or-node-url" : "Nazwa bloga lub URL",
@@ -442,6 +443,7 @@
   "nothing-yet" : "Jeszcze nic.",
   "notify-about-update" : "Powiadom obserwujących o aktualizacji",
   "notify-followers" : "Powiadom obserwujących",
+  "not-now" : "Nie teraz",
   "not-publish-my-complaint" : "Proszę nie publikować mojej skargi",
   "not-show-complaints" : "Nie pokazuj skarg",
   "not-specified" : "Nie określono",
@@ -567,7 +569,6 @@
   "redirecting" : "Przekierowanie...",
   "register" : "Zarejestruj",
   "register-different-name" : "Zarejestruj inną nazwę",
-  "registered-name-secret" : "Tajna nazwa zarejestrowana",
   "register-new-name" : "Zarejestruj nową nazwę",
   "reject" : "Odrzuć",
   "remind-later" : "Przypomnij mi później",
@@ -815,6 +816,7 @@
     "sheet" : {
       "addons" : "Dodatki",
       "appearance" : "Wygląd",
+      "applications" : "Aplikacje",
       "comment" : "Komentarz",
       "moderation" : "Moderacja",
       "news" : "Aktualności",
@@ -970,8 +972,9 @@
   "width" : "Szerokość",
   "write-anything" : "Napisz cokolwiek...",
   "write-comment-here" : "Napisz komentarz do {mention} tutaj...",
-  "write-down-words" : "Proszę zapisz lub wydrukuj te słowa i przechowaj je w bezpiecznym miejscu. Będziesz potrzebował ich do wszelkich operacji z nazwą '{name}'. <b>Jeśli zgubisz te słowa, nie można ich odzyskać i całkowicie stracisz kontrolę nad swoją zarejestrowaną nazwą.</b>",
-  "written-down-words" : "Zapisałem wszystkie te słowa",
+  "write-down-secret-words" : "<0>Zapisz tajne słowa.</0> Dzięki tym słowom będziesz mógł, w razie potrzeby, przenieść swojego bloga na inny serwer, zachowując nazwę i wszystkie kontakty społeczne. Skopiuj te słowa i umieść je w bezpiecznym miejscu. Usuń je z serwera, aby pozostały tylko u ciebie.\n",
+  "write-down-words" : "<0>Proszę zapisać, zapisać w pliku lub wydrukować te słowa i przechowywać je w bezpiecznym miejscu.</0><1>Jeśli stracisz te słowa, nie można ich odzyskać i całkowicie stracisz kontrolę nad swoją zarejestrowaną nazwą.</1><2>Będziesz ich potrzebować do wszystkich operacji związanych z nazwą ‘{name}’.</2>",
+  "written-down-delete-words" : "Zapisano. Usuń słowa z serwera",
   "wrong-reset-token" : "Nieprawidłowy kod sekretny",
   "yes" : "Tak",
   "you-at-home" : "Jesteś w swoim węźle domowym",
