--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -408,6 +408,7 @@
   "name" : "Имя",
   "name-already-taken" : "Имя уже занято. Но вы можете добавить к имени любое число (например, 'Arthur_42')",
   "name-help" : "Имя должно быть длиной от 4 до 120 символов. Вы можете использовать любые символы юникода (включая буквы любого алфавита), кроме пробелов и знаков препинания. Разрешены только такие знаки препинания:",
+  "name-key" : "Именной ключ",
   "name-not-allowed" : "Недопустимое имя",
   "name-operation-started" : "Операция над именем запущена",
   "name-or-node-url" : "Имя или URL блога",
@@ -442,6 +443,7 @@
   "nothing-yet" : "Тут пока пусто.",
   "notify-about-update" : "Уведомить подписчиков об обновлении",
   "notify-followers" : "Уведомить подписчиков",
+  "not-now" : "Не сейчас",
   "not-publish-my-complaint" : "Пожалуйста, не публикуйте мою жалобу",
   "not-show-complaints" : "Не показывать жалобы",
   "not-specified" : "Не указана",
@@ -567,7 +569,6 @@
   "redirecting" : "Перенаправляю...",
   "register" : "Регистрация",
   "register-different-name" : "Зарегистрировать другое имя",
-  "registered-name-secret" : "Секрет зарегистрированного имени",
   "register-new-name" : "Регистрация нового имени",
   "reject" : "Отклонить",
   "remind-later" : "Напомнить позже",
@@ -815,6 +816,7 @@
     "sheet" : {
       "addons" : "Дополнения",
       "appearance" : "Вид",
+      "applications" : "Приложения",
       "comment" : "Комментарий",
       "moderation" : "Модерация",
       "news" : "Новости",
@@ -970,8 +972,9 @@
   "width" : "Ширина",
   "write-anything" : "Пишите что угодно...",
   "write-comment-here" : "Напишите тут комментарий для {mention}...",
-  "write-down-words" : "Пожалуйста, запишите или распечатайте эти слова и храните их в безопасном месте. Они вам понадобятся для любых операций с именем ‘{name}’. <b>Если вы потеряете эти слова, их нельзя будет восстановить, и вы полностью потеряете контроль над вашим зарегистрированным именем.</b>",
-  "written-down-words" : "Я записал эти слова",
+  "write-down-secret-words" : "<0>Запишите секретные слова.</0> С помощью этих слов вы сможете, при необходимости, перенести свой блог на другой сервер, сохранив имя и все социальные связи. Скопируйте эти слова и положите в безопасное место. Удалите их с сервера, чтобы они остались только у вас.",
+  "write-down-words" : "<0>Пожалуйста, запишите, сохраните в файл или распечатайте эти слова и храните их в безопасном месте.</0><1>Если вы потеряете эти слова, их нельзя будет восстановить, и вы полностью потеряете контроль над вашим зарегистрированным именем.</1><2>Они вам понадобятся для любых операций с именем ‘{name}’.</2>",
+  "written-down-delete-words" : "Записано. Удали слова с сервера",
   "wrong-reset-token" : "Неправильный секретный код",
   "yes" : "Да",
   "you-at-home" : "Это ваш домашний блог",
