--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -408,6 +408,7 @@
   "name" : "Ім'я",
   "name-already-taken" : "Ім'я вже зайняте. Але ви можете додати до імені будь-яке число (наприклад, 'Arthur_42')",
   "name-help" : "Ім'я має бути довжиною від 4 до 120 символів. Ви можете скористатись будь-якими символами юнікоду (в тому числі літерами будь-якого алфавіту), окрім пробілів та розділових знаків. Дозволені лише такі розділові знаки:",
+  "name-key" : "Іменний ключ",
   "name-not-allowed" : "Неприпустиме ім'я",
   "name-operation-started" : "Операцію над ім'ям запущено",
   "name-or-node-url" : "Ім'я чи URL блога",
@@ -442,6 +443,7 @@
   "nothing-yet" : "Тут поки що порожньо.",
   "notify-about-update" : "Повідомити підписникам про оновлення",
   "notify-followers" : "Повідомити підписникам",
+  "not-now" : "Не зараз",
   "not-publish-my-complaint" : "Будь ласка, не публікуйте мою скаргу",
   "not-show-complaints" : "Не показувати скарги",
   "not-specified" : "Не вказана",
@@ -567,7 +569,6 @@
   "redirecting" : "Перенаправляю...",
   "register" : "Реєстрація",
   "register-different-name" : "Зареєструвати інше ім'я",
-  "registered-name-secret" : "Секрет зареєстрованого імені",
   "register-new-name" : "Реєстрація нового імені",
   "reject" : "Відхилити",
   "remind-later" : "Нагадати пізніше",
@@ -815,6 +816,7 @@
     "sheet" : {
       "addons" : "Додатки",
       "appearance" : "Вигляд",
+      "applications" : "Додатки",
       "comment" : "Коментар",
       "moderation" : "Модерація",
       "news" : "Новини",
@@ -970,8 +972,9 @@
   "width" : "Ширина",
   "write-anything" : "Пишіть що завгодно...",
   "write-comment-here" : "Напишіть тут коментар для {mention}...",
-  "write-down-words" : "Будь ласка, запишіть або роздрукуйте ці слова та зберігайте їх у безпечному місці. Вони вам знадобляться для будь-яких операцій з ім'ям '{name}'. <b>Якщо ви втратите ці слова, їх не можна буде відновити, і ви повністю втратите контроль над вашим зареєстрованим ім'ям.</b>",
-  "written-down-words" : "Я записав ці слова",
+  "write-down-secret-words" : "<0>Запишіть секретні слова.</0> За допомогою цих слів ви зможете, у разі необхідності, перенести свій блог на інший сервер, зберігши ім'я та всі соціальні зв'язки. Скопіюйте ці слова та покладіть у безпечне місце. Видаліть їх із сервера, щоб вони залишилися тільки у вас.",
+  "write-down-words" : "<0>Будь ласка, запишіть, збережіть у файл або роздрукуйте ці слова і зберігайте їх у безпечному місці.</0><1>Якщо ви втратите ці слова, їх неможливо буде відновити, і ви повністю втратите контроль над вашим зареєстрованим ім'ям.</1><2>Вони вам знадобляться для будь-яких операцій з ім'ям ‘{name}’.</2>",
+  "written-down-delete-words" : "Записано. Видали слова з сервера",
   "wrong-reset-token" : "Невірний секретний код",
   "yes" : "Так",
   "you-at-home" : "Це ваш домашній блог",
