--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -200,7 +200,7 @@
       "sec": "секунд"
     }
   },
-  "edit": "Редактировать",
+  "edit": "Изменить",
   "edit-comment": "Редактировать комментарий",
   "edit-donation": "Редактировать донат",
   "edit-ellipsis": "Редактировать...",
@@ -455,6 +455,7 @@
   "only-selected-allowed": "Разрешены только выбранные",
   "only-selected-allowed-star-preferred": "Разрешены только выбранные, а отмеченные <0/> предпочтительны",
   "open": "Открыть",
+  "open-link": "Открыть ссылку:",
   "operation-at": "в",
   "operation-status": {
     "added": "Операция добавлена",
