--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -200,7 +200,7 @@
       "sec": "секунд"
     }
   },
-  "edit": "Редагувати",
+  "edit": "Змінити",
   "edit-comment": "Редагувати коментар",
   "edit-donation": "Редагувати донат",
   "edit-ellipsis": "Редагувати...",
@@ -455,6 +455,7 @@
   "only-selected-allowed": "Дозволені лише обрані",
   "only-selected-allowed-star-preferred": "Дозволені лише обрані, а зазначені <0/> мають перевагу",
   "open": "Відкрити",
+  "open-link": "Відкрити посилання:",
   "operation-at": "у",
   "operation-status": {
     "added": "Операцію додано",
