Basic infrastructure of editing with Slate.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -862,7 +862,8 @@
   "source-format": {
     "html": "HTML",
     "markdown": "Markdown",
-    "plain-text": "No formatting"
+    "plain-text": "No formatting",
+    "visual-html": "Visual editor"
   },
   "spoiler": "Spoiler",
   "spoiler-alert": "spoiler!",
