--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -862,7 +862,8 @@
   "source-format": {
     "html": "HTML",
     "markdown": "Markdown",
-    "plain-text": "Brak formatowania"
+    "plain-text": "Brak formatowania",
+    "visual-html": "Edytor wizualny"
   },
   "spoiler": "Spoiler",
   "spoiler-alert": "spoiler!",
