--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -862,7 +862,8 @@
   "source-format": {
     "html": "HTML",
     "markdown": "Markdown",
-    "plain-text": "Без форматування"
+    "plain-text": "Без форматування",
+    "visual-html": "Візуальний редактор"
   },
   "spoiler": "Спойлер",
   "spoiler-alert": "спойлер!",
