--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -862,7 +862,8 @@
   "source-format": {
     "html": "HTML",
     "markdown": "Markdown",
-    "plain-text": "Без форматирования"
+    "plain-text": "Без форматирования",
+    "visual-html": "Визуальный редактор"
   },
   "spoiler": "Спойлер",
   "spoiler-alert": "спойлер!",
