Inserting a horizontal rule in the visual editor.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -272,6 +272,7 @@
   "hide-my-subscription": "Hide my subscription",
   "hide-post-google-play": "Do not show the post \"{heading}\" on Android (Google Play).",
   "hide-subscription-to-me": "Hide subscription to me",
+  "horizontal-line": "Horizontal line",
   "how-often-blog-search": "How often was your blog found on Google and other search engines in the past week?",
   "i-agree": "I agree",
   "ignore": "Ignore",
