--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -272,6 +272,7 @@
   "hide-my-subscription": "Ukryj moją subskrypcję",
   "hide-post-google-play": "Nie pokazuj posta \"{heading}\" w Androidzie (Google Play).",
   "hide-subscription-to-me": "Ukryj subskrypcję do mnie",
+  "horizontal-line": "Linia pozioma",
   "how-often-blog-search": "Jak często Twój blog był znajdowany w Google i innych wyszukiwarkach w ostatnim tygodniu?",
   "i-agree": "Zgadzam się",
   "ignore": "Ignoruj",
