--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -272,6 +272,7 @@
   "hide-my-subscription": "Скрыть мою подписку",
   "hide-post-google-play": "Не показывать пост \"{heading}\" в Android (Google Play).",
   "hide-subscription-to-me": "Скрыть подписку на меня",
+  "horizontal-line": "Горизонтальная линия",
   "how-often-blog-search": "Как часто ваш блог находили в Google и других поисковых системах за последнюю неделю?",
   "i-agree": "Я {gender, select, female {согласна} other {согласен}}",
   "ignore": "Игнорировать",
