--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -272,6 +272,7 @@
   "hide-my-subscription": "Приховати мою підписку",
   "hide-post-google-play": "Не показувати пост \"{heading}\" у Android (Google Play).",
   "hide-subscription-to-me": "Приховати підписку на мене",
+  "horizontal-line": "Горизонтальна лінія",
   "how-often-blog-search": "Як часто ваш блог знаходили в Google та інших пошукових системах за останній тиждень?",
   "i-agree": "Я погоджуюсь",
   "ignore": "Ігнорувати",
