--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -212,6 +212,7 @@
   "email": "Электронная почта",
   "email-not-set": "К сожалению, адрес e-mail для блога <b>{location}</b> не был задан, поэтому автоматический сброс пароля невозможен. Пожалуйста, свяжитесь с вашим провайдером Moera или владельцем сервера, чтобы найти другие пути для сброса пароля.",
   "email-set": "Адрес электронной почты установлен",
+  "emoji": "Эмодзи",
   "enable-oppose-reactions": "Разрешить неодобрительные реакции",
   "enable-reactions": "Разрешить реакции",
   "enter-name": "Введите имя...",
