--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -212,6 +212,7 @@
   "email": "Електронна пошта",
   "email-not-set": "На жаль, адреса e-mail для блогу <b>{location}</b> не була задана, тому автоматичне скидання пароля неможливе. Будь ласка, зв'яжіться з вашим провайдером Moera або власником сервера, щоб знайти інші шляхи для скидання пароля.",
   "email-set": "Адресу електронної пошти встановлено",
+  "emoji": "Емодзі",
   "enable-oppose-reactions": "Дозволити несхвальні реакції",
   "enable-reactions": "Дозволити реакції",
   "enter-name": "Введіть ім'я...",
