Block quotes in the visual editor.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -923,6 +923,7 @@
   "unkick": "Take back",
   "unknown-name": "Unknown name",
   "unpin": "Unpin",
+  "unquote": "Unquote",
   "unselect-all": "Unselect all",
   "unsigned": "Unsigned",
   "unsubscribe": "Unsubscribe",
