--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -923,6 +923,7 @@
   "unkick": "Cofnij wyrzucenie",
   "unknown-name": "Nieznana nazwa",
   "unpin": "Odepnij",
+  "unquote": "Usuń cytat",
   "unselect-all": "Odznacz wszystko",
   "unsigned": "Niepodpisany",
   "unsubscribe": "Anuluj subskrypcję",
