--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -923,6 +923,7 @@
   "unkick": "Вернуть",
   "unknown-name": "Неизвестное имя",
   "unpin": "Открепить",
+  "unquote": "Убрать цитату",
   "unselect-all": "Снять выбор",
   "unsigned": "Не подписано",
   "unsubscribe": "Отписаться",
