--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -923,6 +923,7 @@
   "unkick": "Повернути",
   "unknown-name": "Невідоме ім'я",
   "unpin": "Відкріпити",
+  "unquote": "Зняти цитату",
   "unselect-all": "Зняти вибір",
   "unsigned": "Не підписано",
   "unsubscribe": "Відписатись",
