Creating lists and nesting them, while using a flat list structure with indents internally in the visual editor.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -56,6 +56,7 @@
   "blog-moved": "It seems that blog <b>{name}</b> has moved to the new address <b>{location}</b>. Do you want to open the blog at the new location?",
   "bold": "Bold",
   "bottom": "Bottom",
+  "bulleted-list": "Bulleted list",
   "cancel": "Cancel",
   "cancel-request": "Cancel the request",
   "cannot-resolve-name ": "Cannot resolve name:",
@@ -140,6 +141,7 @@
   "decision": "Decision",
   "decision-sheriff-initiative": "The decision was made at the sheriff's initiative.",
   "decision-upon-complaint": "The decision was made upon <0>a complaint</0> by another user.",
+  "decrease-indent": "Decrease indent",
   "defrosting-message-box": "\uD83C\uDF89 <b>We are thrilled to see you again after such a long absence!</b><br><br>Many great new things have been added to Moera since then. Look around while your feed is being filled with new posts.",
   "delete": "Delete",
   "delete-account-moera": "Delete my account in Moera",
@@ -296,6 +298,7 @@
   "in": "in",
   "in-blocked": "In blocked",
   "in-blocked-plural": "In blocked",
+  "increase-indent": "Increase indent",
   "in-friends": "In friends",
   "in-post": "In the post",
   "insert-image": "Insert an image",
@@ -452,6 +455,7 @@
   "not-subscribed": "Not subscribed",
   "not-subscribed-friend": "You are not yet subscribed to your friend. Do you want to subscribe?",
   "not-valid-e-mail": "Not a valid e-mail address",
+  "numbered-list": "Numbered list",
   "ok": "OK",
   "only-new": "Only new",
   "only-selected-allowed": "Only selected are allowed",
