--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -56,6 +56,7 @@
   "blog-moved": "Wygląda na to, że blog <b>{name}</b> został przeniesiony pod nowy adres <b>{location}</b>. Chcesz otworzyć blog w nowej lokalizacji?",
   "bold": "Pogrubienie",
   "bottom": "Dół",
+  "bulleted-list": "Lista punktowana",
   "cancel": "Anuluj",
   "cancel-request": "Anuluj żądanie",
   "cannot-resolve-name ": "Nie można rozwiązać nazwy:",
@@ -140,6 +141,7 @@
   "decision": "Decyzja",
   "decision-sheriff-initiative": "Decyzja została podjęta z inicjatywy szeryfa.",
   "decision-upon-complaint": "Decyzja została podjęta po <0>skardze</0> złożonej przez innego użytkownika.",
+  "decrease-indent": "Zmniejsz wcięcie",
   "defrosting-message-box": "\uD83C\uDF89 <b>Bardzo się cieszymy, że możemy Cię ponownie zobaczyć po tak długiej nieobecności!</b><br><br>Od tego czasu w Moera wydarzyło się wiele wspaniałych rzeczy. Rozejrzyj się, gdy Twój kanał zapełnia się nowymi postami.",
   "delete": "Usuń",
   "delete-account-moera": "Usuń moje konto w Moera",
@@ -296,6 +298,7 @@
   "in": "w",
   "in-blocked": "Zablokowany",
   "in-blocked-plural": "Zablokowani",
+  "increase-indent": "Zwiększ wcięcie",
   "in-friends": "W znajomych",
   "in-post": "W poście",
   "insert-image": "Wstaw obraz",
@@ -452,6 +455,7 @@
   "not-subscribed": "Nie zasubskrybowano",
   "not-subscribed-friend": "Nie subskrybujesz jeszcze swojego znajomego. Czy chcesz subskrybować?",
   "not-valid-e-mail": "Nieprawidłowy adres e-mail",
+  "numbered-list": "Lista numerowana",
   "ok": "OK",
   "only-new": "Tylko nowe",
   "only-selected-allowed": "Dozwolone tylko wybrane",
