--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -56,6 +56,7 @@
   "blog-moved": "Похоже, что блог <b>{name}</b> переехал на новый адрес <b>{location}</b>. Хотите открыть блог на новом месте?",
   "bold": "Полужирный",
   "bottom": "В начало",
+  "bulleted-list": "Маркированный список",
   "cancel": "Отмена",
   "cancel-request": "Отменить запрос",
   "cannot-resolve-name ": "Не удалось опознать имя:",
@@ -140,6 +141,7 @@
   "decision": "Решение",
   "decision-sheriff-initiative": "Решение было принято по инициативе шерифа.",
   "decision-upon-complaint": "Решение было принято по <0>жалобе</0> другого пользователя.",
+  "decrease-indent": "Уменьшить отступ",
   "defrosting-message-box": "\uD83C\uDF89 <b>Мы очень рады снова видеть вас после столь долгого отсутствия!</b><br><br>Много замечательных вещей появилось в Moera с тех пор. Осмотритесь, пока ваша лента наполняется новыми постами.",
   "delete": "Удалить",
   "delete-account-moera": "Удалить мой аккаунт в Moera",
@@ -296,6 +298,7 @@
   "in": "в",
   "in-blocked": "Заблокировал",
   "in-blocked-plural": "Заблокировали",
+  "increase-indent": "Увеличить отступ",
   "in-friends": "В друзьях",
   "in-post": "В посте",
   "insert-image": "Вставить картинку",
@@ -452,6 +455,7 @@
   "not-subscribed": "Не {gender, select, female {подписан} other {подписана}}",
   "not-subscribed-friend": "Вы еще не подписаны на своего друга. Хотите подписаться?",
   "not-valid-e-mail": "Недопустимый адрес e-mail",
+  "numbered-list": "Нумерованный список",
   "ok": "OK",
   "only-new": "Только новые",
   "only-selected-allowed": "Разрешены только выбранные",
