--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -56,6 +56,7 @@
   "blog-moved": "Здається, блог <b>{name}</b> переїхав за новою адресою <b>{location}</b>. Бажаєте відкрити блог на новому місці?",
   "bold": "Жирний",
   "bottom": "У початок",
+  "bulleted-list": "Маркований список",
   "cancel": "Відмінити",
   "cancel-request": "Скасувати запит",
   "cannot-resolve-name ": "Не вдалося розпізнати ім'я:",
@@ -140,6 +141,7 @@
   "decision": "Рішення",
   "decision-sheriff-initiative": "Рішення було прийнято за ініціативою шерифа.",
   "decision-upon-complaint": "Рішення було прийнято за <0>скаргою</0> іншого користувача.",
+  "decrease-indent": "Зменшити відступ",
   "defrosting-message-box": "\uD83C\uDF89 <b>Ми дуже раді знову бачити вас після такої тривалої відсутності!</b><br><br>Багато чудових речей з'явилося в Moera з того часу. Подивіться, поки ваша стрічка наповнюється новими постами.",
   "delete": "Видалити",
   "delete-account-moera": "Видалити мій аккаунт у Moera",
@@ -296,6 +298,7 @@
   "in": "у",
   "in-blocked": "Заблокував",
   "in-blocked-plural": "Заблокували",
+  "increase-indent": "Збільшити відступ",
   "in-friends": "У друзях",
   "in-post": "У пості",
   "insert-image": "Вставити картинку",
@@ -452,6 +455,7 @@
   "not-subscribed": "Не {gender, select, female {підписаний} other {підписана}}",
   "not-subscribed-friend": "Ви ще не підписані на свого друга. Бажаєте підписатися?",
   "not-valid-e-mail": "Неприпустима адреса e-mail",
+  "numbered-list": "Нумерований список",
   "ok": "OK",
   "only-new": "Тільки нові",
   "only-selected-allowed": "Дозволені лише обрані",
