Formatting heading in the visual editor.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -259,6 +259,7 @@
   "go-to": "Go to...",
   "go-top": "Go to the top",
   "grant-access": "Grant Access",
+  "heading": "Heading",
   "height": "Height",
   "help": "Help",
   "hide": "Hide",
@@ -440,6 +441,7 @@
   "no-name-known": "no name known",
   "no-name-set": "no name set",
   "no-requests-available": "No requests available.",
+  "normal": "Normal",
   "not-allowed": "Not allowed",
   "not-connected-home": "Not logged in",
   "note-complaints-public": "<b>Note:</b> All complaints to the sheriff are public. You can ask not to publish your complaint for some reason, but the final decision is made by the sheriff.",
