--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -259,6 +259,7 @@
   "go-to": "Przejdź do...",
   "go-top": "Przejdź na górę",
   "grant-access": "Przyznanie dostępu",
+  "heading": "Nagłówek",
   "height": "Wysokość",
   "help": "Pomoc",
   "hide": "Ukryj",
@@ -440,6 +441,7 @@
   "no-name-known": "nieznana nazwa",
   "no-name-set": "nie ustawiono nazwy",
   "no-requests-available": "Brak dostępnych żądań.",
+  "normal": "Normalny",
   "not-allowed": "Nie dozwolone",
   "not-connected-home": "Nie zalogowano",
   "note-complaints-public": "<b>Uwaga:</b> wszystkie skargi kierowane do szeryfa są publiczne. Możesz poprosić o niepublikowanie Twojej skargi z jakiegokolwiek powodu, ale ostateczna decyzja należy do szeryfa.",
