--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -259,6 +259,7 @@
   "go-to": "Перейти...",
   "go-top": "Перейти вверх",
   "grant-access": "Предоставление доступа",
+  "heading": "Заголовок",
   "height": "Высота",
   "help": "Помощь",
   "hide": "Скрыть",
@@ -440,6 +441,7 @@
   "no-name-known": "неизвестное имя",
   "no-name-set": "имя не задано",
   "no-requests-available": "Нет доступных просьб.",
+  "normal": "Обычный",
   "not-allowed": "Недопустимо",
   "not-connected-home": "Не вошли",
   "note-complaints-public": "<b>Примечание:</b> Все жалобы шерифу являются общедоступными. Вы можете попросить не публиковать вашу жалобу по какой-либо причине, но окончательное решение принимает шериф.",
