--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -259,6 +259,7 @@
   "go-to": "Перейти...",
   "go-top": "Перейти догори",
   "grant-access": "Надання доступу",
+  "heading": "Заголовок",
   "height": "Висота",
   "help": "Допомога",
   "hide": "Приховати",
@@ -440,6 +441,7 @@
   "no-name-known": "невідоме ім'я",
   "no-name-set": "ім'я не задано",
   "no-requests-available": "Немає доступних прохань.",
+  "normal": "Звичайний",
   "not-allowed": "Неприпустимо",
   "not-connected-home": "Не увійшли",
   "note-complaints-public": "<b>Примітка:</b> Усі скарги шерифові є відкритими. Ви можете попросити не публікувати вашу скаргу з якоїсь причини, але остаточне рішення приймає шериф.",
