Visual editor panel dropdown for extra formatting features.

--- a/src/i18n/locales/en/message.json
+++ b/src/i18n/locales/en/message.json
@@ -77,6 +77,8 @@
   "clipboard-contains-formatting": "The clipboard contains text with formatting. Do you want to paste the text with formatting tags?",
   "clock-differ": "<b>Warning:</b> Clock in your computer significantly differ from the real time. This may affect cryptographic algorithms and cause problems for Moera client. It is recommended to turn clock synchronization on in your operating system.",
   "close": "Close",
+  "code": "Code",
+  "code-block": "Code block",
   "collapse": "Collapse ↑",
   "comment-button": "Comment",
   "comment-edited-conflict": "The comment was edited by somebody.",
@@ -239,6 +241,7 @@
   "forgot-home-password": "Forgot Home Password",
   "forgot-password": "Forgot password",
   "formatting-hint": "<0>Markdown:</0> see <1>cheatsheet</1> or <2>tutorial</2> to see how to do more. See also <3>emoji cheatsheet</3>.",
+  "formula": "Formula",
   "friend": "Friend",
   "friend-groups": "Groups of friends...",
   "friend-groups.friends": "Friends",
@@ -404,6 +407,7 @@
   "mention-copied": "Mention copied to the clipboard",
   "menu": "Menu",
   "message": "Message",
+  "more": "More...",
   "more-links": "{count} {count, plural, one {link} other {links}}",
   "more-reactions": "{remaining} more",
   "more-reactions-hidden": "{remaining} more hidden",
@@ -892,8 +896,10 @@
   "subscribed-to-me": "Subscribed to me",
   "subscribe-me": "Subscribe to me",
   "subscribers": "Subscribers",
+  "subscript": "Subscript",
   "subscriptions": "Subscriptions",
   "summary": "Summary",
+  "superscript": "Superscript",
   "support": "Support",
   "terms-and-conditions": "Terms and Conditions",
   "text": "Text",
