--- a/src/i18n/locales/pl/message.json
+++ b/src/i18n/locales/pl/message.json
@@ -77,6 +77,8 @@
   "clipboard-contains-formatting": "Schowek zawiera tekst z formatowaniem. Czy chcesz wkleić tekst z tagami formatującymi?",
   "clock-differ": "<b>Ostrzeżenie:</b> Zegar w Twoim komputerze znacznie różni się od rzeczywistego czasu. Może to wpłynąć na algorytmy kryptograficzne i powodować problemy dla klienta Moera. Zaleca się włączenie synchronizacji zegara w systemie operacyjnym.",
   "close": "Zamknij",
+  "code": "Kod",
+  "code-block": "Blok kodu",
   "collapse": "Zwiń ↑",
   "comment-button": "Komentarz",
   "comment-edited-conflict": "Komentarz został edytowany przez kogoś.",
@@ -239,6 +241,7 @@
   "forgot-home-password": "Zapomniałem hasła do domu",
   "forgot-password": "Zapomniałem hasła",
   "formatting-hint": "<0>Markdown:</0> zobacz <1>cheatsheet</1> lub <2>poradnik</2>, aby dowiedzieć się, jak zrobić więcej. Zobacz również <3>emoji cheatsheet</3>.",
+  "formula": "Formuła",
   "friend": "Znajomyj",
   "friend-groups": "Grupy znajomych...",
   "friend-groups.friends": "Znajomy",
@@ -404,6 +407,7 @@
   "mention-copied": "Wzmianka skopiowana do schowka",
   "menu": "Menu",
   "message": "Wiadomość",
+  "more": "Więcej...",
   "more-links": "{count} {count, plural, one {link} other {linki}}",
   "more-reactions": "{remaining} więcej",
   "more-reactions-hidden": "{remaining} więcej ukrytych",
@@ -892,8 +896,10 @@
   "subscribed-to-me": "Zasubskrybowano mnie",
   "subscribe-me": "Zasubskrybuj mnie",
   "subscribers": "Subskrybenci",
+  "subscript": "Indeks dolny",
   "subscriptions": "Subskrypcje",
   "summary": "Podsumowanie",
+  "superscript": "Indeks górny",
   "support": "Wsparcie",
   "terms-and-conditions": "Warunki i zasady",
   "text": "Tekst",
