--- a/src/i18n/locales/ru/message.json
+++ b/src/i18n/locales/ru/message.json
@@ -77,6 +77,8 @@
   "clipboard-contains-formatting": "Буфер обмена содержит текст с форматированием. Вставить текст с тегами форматирования?",
   "clock-differ": "<b>Предупреждение:</b> Часы на вашем компьютере существенно отличаются от реального времени. Это может повлиять на криптографические алгоритмы и создать проблемы для клиента Moera. Рекомендуется включить синхронизацию времени в вашей операционной системе.",
   "close": "Закрыть",
+  "code": "Код",
+  "code-block": "Блок кода",
   "collapse": "Свернуть ↑",
   "comment-button": "Комментировать",
   "comment-edited-conflict": "Комментарий был кем-то изменён.",
@@ -239,6 +241,7 @@
   "forgot-home-password": "Забыл домашний пароль",
   "forgot-password": "Забыл пароль",
   "formatting-hint": "<0>Markdown:</0> загляните в <1>шпаргалку</1> или <2>учебник</2>, чтобы узнать о других возможностях. См. также <3>шпаргалку по эмодзи</3>.",
+  "formula": "Формула",
   "friend": "Друг",
   "friend-groups": "Группы друзей...",
   "friend-groups.friends": "Друзья",
@@ -404,6 +407,7 @@
   "mention-copied": "Упоминание скопировано в буфер обмена",
   "menu": "Меню",
   "message": "Сообщение",
+  "more": "Ещё...",
   "more-links": "{count} {count, plural, one {ссылка} few {ссылки} other {ссылок}}",
   "more-reactions": "Ещё {remaining}",
   "more-reactions-hidden": "Ещё {remaining} {remaining, plural, one {скрытая} other {скрытых}}",
@@ -892,8 +896,10 @@
   "subscribed-to-me": "{gender, select, female {Подписана} other {Подписан}} на меня",
   "subscribe-me": "Подписаться на меня",
   "subscribers": "Подписчики",
+  "subscript": "Подстрочный знак",
   "subscriptions": "Подписки",
   "summary": "Коротко",
+  "superscript": "Надстрочный знак",
   "support": "Одобряю",
   "terms-and-conditions": "Правилами использования",
   "text": "Текст",
