--- a/src/i18n/locales/uk/message.json
+++ b/src/i18n/locales/uk/message.json
@@ -77,6 +77,8 @@
   "clipboard-contains-formatting": "Буфер обміну містить текст із форматуванням. Вставити текст із тегами форматування?",
   "clock-differ": "<b>Попередження:</b> Годинник на вашому комп'ютері істотно відрізняється від реального часу. Це може вплинути на криптографічні алгоритми та створити проблеми для клієнта Moera. Бажано увімкнути синхронізацію часу у вашій операційній системі.",
   "close": "Закрити",
+  "code": "Код",
+  "code-block": "Блок коду",
   "collapse": "Згорнути ↑",
   "comment-button": "Коментувати",
   "comment-edited-conflict": "Коментар був кимось змінений.",
@@ -239,6 +241,7 @@
   "forgot-home-password": "Забув домашній пароль",
   "forgot-password": "Забув пароль",
   "formatting-hint": "<0>Markdown:</0> зазирніть у <1>шпаргалку</1> чи <2>підручник</2>, щоб дізнатися про інші можливості. Див. також <3>шпаргалку з емодзі</3>.",
+  "formula": "Формула",
   "friend": "Друг",
   "friend-groups": "Групи друзів...",
   "friend-groups.friends": "Друзі",
@@ -404,6 +407,7 @@
   "mention-copied": "Згадка скопійована до буфера обміну",
   "menu": "Меню",
   "message": "Повідомлення",
+  "more": "Ще...",
   "more-links": "{count} {count, plural, one {посилання} few {посилання} other {посилань}}",
   "more-reactions": "Ще {remaining}",
   "more-reactions-hidden": "Ещё {remaining} {remaining, plural, one {прихована} other {прихованих}}",
@@ -892,8 +896,10 @@
   "subscribed-to-me": "{gender, select, female {Підписана} other {Підписаний}} на мене",
   "subscribe-me": "Підписатись на мене",
   "subscribers": "Підписники",
+  "subscript": "Підрядковий знак",
   "subscriptions": "Підписки",
   "summary": "Коротко",
+  "superscript": "Надрядковий знак",
   "support": "Схвалюю",
   "terms-and-conditions": "Правилами користування",
   "text": "Текст",
